# cudaAwareMPI_test

./: CMakeLists.txt  mpitest.nsys-rep
src/: test.f90
